--- a/darkTheme.css
+++ b/darkTheme.css
@@ -1,24 +1,24 @@
 :root {
-    --dark: #272c35;
-    --darker: #1f232a;
-    --light: #d1d1d1;
-    --lighter: #e9e9e9;
-    --accent: #7289da;
-    --icon: #e1e1e1;
-    --shadow: rgba(0, 0, 0, 0.2);
-    --mred: #a3525b;
-    --mgreen: #70a352;
-    --mblue: #527aa3;
+    --dark:    #272C35;
+    --darker:  #1F232A;
+    --light:   #D1D1D1;
+    --lighter: #E9E9E9;
+    --accent:  #7289DA;
+    --icon:    #E1E1E1;
+    --shadow:  rgba(0,0,0,0.10);
+    --mred:    #A3525B;
+    --mgreen:  #70A352;
+    --mblue:   #527AA3;
+    --hover-delay: 0.8s;
+    --emojiOpacity: 0.75;
 }
-
 
 /* Body reset. */
-
 body {
+    font-family: font_name, 'Segoe UI', 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Arial', 'Ubuntu', 'Cantarell', 'Fira Sans', sans-serif;
     background: none;
-    background-color: var(--dark);
+    background-color: var(--dark); 
 }
-
 
 /* Scrollbar track. */
 
@@ -33,7 +33,6 @@ body {
     border-radius: 3px;
     background-color: var(--accent);
 }
-
 
 /* App wrapper. */
 
@@ -88,7 +87,7 @@ body {
     background-color: var(--dark);
 }
 
-.app ._3q4NP ._3qlW9::before {
+.app ._1_q7u ._3q4NP ._3qlW9::before {
     left: 0;
     top: 0;
     bottom: 6px;
@@ -568,8 +567,8 @@ _1ArIP div {
 
 /* Search messages. TODO: Apply this to all search elements. */
 
-._2yeJ5 ._1iMEz {
-    background-color: var(--darkerz) !important;
+._2yeJ5 ._1iMEz ._13mgZ {
+    background-color: var(--darker) !important;
 }
 
 
@@ -1452,3 +1451,26 @@ span[data-icon="down-context"] svg path {
 .quoted-mention {
     color: wheat !important;
 }
+
+._1vDUw._1UbeR, .l90LN.GclUX, ._2rR_l._29nQu, ._24k3z, ._1rADT, ._3Seam._2e6ev, ._1ifyO, ._1vDUw._33zGE ,._1LsoD, ._3B8vA, ._2i7Ej, ._2avTY, ._342qq, ._2Qm0c {
+    background-color: var(--dark) !important;
+}
+
+
+/* Message time text */
+._3fnHB {
+    color: var(--light);
+}
+
+._2UaNq , ._2hHc6, ._1ays2{
+    background-color: var(--dark) !important;
+    color: var(--light);
+}
+
+._2Bw3Q , ._3cfBY , ._2yhpw , ._3BqnP { 
+    color: var(--light);
+ }
+
+ ._3H4MS, ._3NWy8, .KgevS, ._17TaE {
+    color: var(--lighter);
+ }
